Fix the alignment error in firefox

--- a/src/assets/scss/_landing.scss
+++ b/src/assets/scss/_landing.scss
@@ -39,6 +39,7 @@ app-landing {
     .form-group {
       display: inline-block;
       width: 60%;
+      vertical-align: middle;
     }
     button.btn {
       display: inline-block !important;
